--- a/view/templates/message.html.twig
+++ b/view/templates/message.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}{{title}}{% endblock %}
 {% block content %}
 
     <div class="row">
@@ -10,7 +10,7 @@
                 <form>
                     <div class="row">
                         <div class="col s3"><i class="material-icons large">{{icon}}</i></div>
-                        <div class="col s9"><p>{{message}}</p></div>
+                        <div class="col s9"><p>{{ message | nl2br }}</p></div>
                     </div>
                     {% if buttons is defined %}
                     <div class="center-align row">
