--- a/view/templates/profile.html.twig
+++ b/view/templates/profile.html.twig
@@ -8,7 +8,7 @@
             {% if photo is not empty %}
                 <img class="materialboxed" src="img/{{ pesel }}.{{ photo }}" style="width: 100%; max-height: 100%">
             {% else %}
-                <img class="materialboxed" src="img/avatar.jpg" style="width: 100%; max-height: 100%">
+                <img class="materialboxed" src="img/not-found.png" style="width: 100%; max-height: 100%">
             {% endif %}
         </div>
         <div class="col s12 m9 information-div">
